docs: EDGE docker + compose installation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,70 @@
 ####################################################################################################
 services:
   edge:
-    image: 192.168.50.211:5000/esthesis/esthesis-edge:latest
+    image: "${ESTHESIS_REGISTRY:-docker.io/esthesisiot}/esthesis-edge:latest"
     restart: unless-stopped
+    pull_policy: always
     environment:
-      QUARKUS_DATASOURCE_JDBC_URL: jdbc:mariadb://mariadb:3306/esthesis-edge
-      ESTHESIS_EDGE_LOCAL_INFLUX_DB_URL: http://influxdb:8086
+      QUARKUS_DATASOURCE_JDBC_URL: "${QUARKUS_DATASOURCE_JDBC_URL:-jdbc:mariadb://mariadb:3306/esthesis-edge}"
+      ESTHESIS_EDGE_LOCAL_INFLUX_DB_URL: "${ESTHESIS_EDGE_LOCAL_INFLUX_DB_URL:-http://influxdb:8086}"
+      QUARKUS_REST_CLIENT_ESTHESIS_AGENT_SERVICE_CLIENT_URL: "${QUARKUS_REST_CLIENT_ESTHESIS_AGENT_SERVICE_CLIENT_URL:-http://localhost:59070}"
+      ESTHESIS_EDGE_ADMIN_SECRET: "${ESTHESIS_EDGE_ADMIN_SECRET:-ca820829-328f-41e0-9207-ef42372f94c3}"
+      ESTHESIS_EDGE_SYNC_CRON: "${ESTHESIS_EDGE_SYNC_CRON:-0 0 * * * ?}"
+      ESTHESIS_EDGE_PURGE_CRON: "${ESTHESIS_EDGE_PURGE_CRON:-0 0 0 * * ?}"
+      ESTHESIS_EDGE_PURGE_SUCCESSFUL_MINUTES: "${ESTHESIS_EDGE_PURGE_SUCCESSFUL_MINUTES:-60}"
+      ESTHESIS_EDGE_PURGE_QUEUED_MINUTES: "${ESTHESIS_EDGE_PURGE_QUEUED_MINUTES:-10080}"
+      ESTHESIS_EDGE_LOCAL_ENABLED: "${ESTHESIS_EDGE_LOCAL_ENABLED:-false}"
+      ESTHESIS_EDGE_LOCAL_INFLUX_DB_TOKEN: "${ESTHESIS_EDGE_LOCAL_INFLUX_DB_TOKEN:-esthesis-edge}"
+      ESTHESIS_EDGE_LOCAL_INFLUX_DB_BUCKET: "${ESTHESIS_EDGE_LOCAL_INFLUX_DB_BUCKET:-edge}"
+      ESTHESIS_EDGE_LOCAL_INFLUX_DB_ORG: "${ESTHESIS_EDGE_LOCAL_INFLUX_DB_ORG:-esthesis}"
+      ESTHESIS_EDGE_CORE_PUSH_ENABLED: "${ESTHESIS_EDGE_CORE_PUSH_ENABLED:-false}"
+      ESTHESIS_EDGE_CORE_PUSH_URL: "${ESTHESIS_EDGE_CORE_PUSH_URL:-}"
+      ESTHESIS_EDGE_CORE_PUSH_TOPIC_TELEMETRY: "${ESTHESIS_EDGE_CORE_PUSH_TOPIC_TELEMETRY:-esthesis/telemetry}"
+      ESTHESIS_EDGE_CORE_PUSH_TOPIC_PING: "${ESTHESIS_EDGE_CORE_PUSH_TOPIC_PING:-esthesis/ping}"
+      ESTHESIS_EDGE_CORE_REGISTRATION_ENABLED: "${ESTHESIS_EDGE_CORE_REGISTRATION_ENABLED:-false}"
+      ESTHESIS_EDGE_CORE_REGISTRATION_SECRET: "${ESTHESIS_EDGE_CORE_REGISTRATION_SECRET:-}"
+      ESTHESIS_EDGE_CORE_TAGS: "${ESTHESIS_EDGE_CORE_TAGS:-edge}"
+      ESTHESIS_EDGE_CORE_KEY_ALGORITHM: "${ESTHESIS_EDGE_CORE_KEY_ALGORITHM:-RSA}"
+      ESTHESIS_EDGE_CORE_CERT: "${ESTHESIS_EDGE_CORE_CERT:-}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_ENABLED:-false}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_CRON: "${ESTHESIS_EDGE_MODULES_ENEDIS_CRON:-0 0 6 * * ?}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_MAX_DEVICES: "${ESTHESIS_EDGE_MODULES_ENEDIS_MAX_DEVICES:-1000}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_PAST_DAYS_INIT: "${ESTHESIS_EDGE_MODULES_ENEDIS_PAST_DAYS_INIT:-30}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_CLIENT_ID: "${ESTHESIS_EDGE_MODULES_ENEDIS_CLIENT_ID:-clientId}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_CLIENT_SECRET: "${ESTHESIS_EDGE_MODULES_ENEDIS_CLIENT_SECRET:-clientSecret}"
+      QUARKUS_REST_CLIENT_ENEDIS_CLIENT_URL: "${QUARKUS_REST_CLIENT_ENEDIS_CLIENT_URL:-https://gw.ext.prod-sandbox.api.enedis.fr}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_ENABLED:-false}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_CATEGORY: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_CATEGORY:-energy}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_MEASUREMENT: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_MEASUREMENT:-dc}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_ERRORS_THRESHOLD: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_ERRORS_THRESHOLD:-10}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ENABLED:-false}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_CATEGORY: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_CATEGORY:-energy}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_MEASUREMENT: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_MEASUREMENT:-dcmp}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ERRORS_THRESHOLD: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ERRORS_THRESHOLD:-10}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ENABLED:-false}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_CATEGORY: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_CATEGORY:-energy}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_MEASUREMENT: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_MEASUREMENT:-dp}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ERRORS_THRESHOLD: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ERRORS_THRESHOLD:-10}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED:-false}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING:-true}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL:-}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL:-http://localhost:8080}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_DURATION: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_DURATION:-P1Y}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_URL:-https://datahub-enedis.fr/wp-content/uploads/Enedis-signature_couleur_RVB_72-dpi.png}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_URL:-https://www.eurodyn.com/wp-content/uploads/2018/11/logo_ed.png}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_URL:-https://esthes.is/docs/edge/images/logo.png}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_ALT: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_ALT:-Enedis}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_ALT: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_ALT:-European Dynamics}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_ALT: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_ALT:-esthesis EDGE}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_BUTTON_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_BUTTON_URL:-https://datahub-enedis.fr/wp-content/uploads/2018/11/vert-enedis.png}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_TITLE: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_TITLE:-Connect your Enedis account}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_MESSAGE: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_MESSAGE:-You will be redirected to Enedis, where you have to authenticate with your Enedis account, and authorise this application to retrieve your electricity consumption data. The authorisation will be valid for 1 year. Your data will be used by us to provide you with insights and recommendations on how to save energy.}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_TITLE: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_TITLE:-Registration successful}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_MESSAGE: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_MESSAGE:-Your account was successfully connected, you may now close this window.}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_TITLE: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_TITLE:-Error connecting account}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_MESSAGE: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_MESSAGE:-An error occurred while connecting your account. Please try again later.}"
     ports:
-      - "8080:8080"
+      - "${ESTHESIS_EDGE_SERVICE_PORT:-8080}:8080"
     depends_on:
       mariadb:
         condition: service_healthy
@@ -23,10 +80,10 @@ services:
     image: mariadb:11.4.3
     restart: unless-stopped
     environment:
-      MARIADB_ROOT_PASSWORD: esthesis-system
-      MARIADB_USER: esthesis-system
-      MARIADB_PASSWORD: esthesis-system
-      MARIADB_DATABASE: esthesis-edge
+      MARIADB_ROOT_PASSWORD: "${QUARKUS_DATASOURCE_PASSWORD:-esthesis-system}"
+      MARIADB_USER: "${QUARKUS_DATASOURCE_USERNAME:-esthesis-system}"
+      MARIADB_PASSWORD: "${QUARKUS_DATASOURCE_PASSWORD:-esthesis-system}"
+      MARIADB_DATABASE: "${QUARKUS_DATASOURCE_DB_NAME:-esthesis-edge}"
     volumes:
       - edge-mariadb-vol:/var/lib/mysql
     healthcheck:
@@ -40,13 +97,13 @@ services:
     restart: unless-stopped
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
-      DOCKER_INFLUXDB_INIT_USERNAME: esthesis-system
-      DOCKER_INFLUXDB_INIT_PASSWORD: esthesis-system
-      DOCKER_INFLUXDB_INIT_ORG: esthesis
-      DOCKER_INFLUXDB_INIT_BUCKET: edge
-      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "Ecw_sqxjoIx7RddbK6kdwh57Ly6LjYvg"
+      DOCKER_INFLUXDB_INIT_USERNAME: "${ESTHESIS_EDGE_LOCAL_INFLUXD_DB_USERNAME:-esthesis-system}"
+      DOCKER_INFLUXDB_INIT_PASSWORD: "${ESTHESIS_EDGE_LOCAL_INFLUXD_DB_PASSWORD:-esthesis-system}"
+      DOCKER_INFLUXDB_INIT_ORG: "${ESTHESIS_EDGE_LOCAL_INFLUX_DB_ORG:-esthesis}"
+      DOCKER_INFLUXDB_INIT_BUCKET: "${ESTHESIS_EDGE_LOCAL_INFLUX_DB_BUCKET:-edge}"
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "${ESTHESIS_EDGE_LOCAL_INFLUX_DB_TOKEN:-Ecw_sqxjoIx7RddbK6kdwh57Ly6LjYvg}"
     ports:
-      - "6086:8086"
+      - "${ESTHESIS_EDGE_INFLUX_DB_SERVICE_PORT:-8086}:8086"
     volumes:
       - edge-influxdb-vol-data:/var/lib/influxdb2
       - edge-influxdb-vol-config:/etc/influxdb2
