--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -38,6 +38,8 @@ spec:
               value: "{{ .Values.quarkus.datasource.password }}"
             - name: "QUARKUS_DATASOURCE_JDBC_URL"
               value: "{{ .Values.quarkus.datasource.jdbc.url }}"
+            - name: "QUARKUS_LOG_LEVEL"
+              value: "{{ .Values.quarkus.log.level }}"
 
             - name: "QUARKUS_REST_CLIENT_ESTHESIS_AGENT_SERVICE_CLIENT_URL"
               value: "{{ .Values.quarkus.restClient.esthesisAgentServiceClient.url }}"
@@ -55,13 +57,13 @@ spec:
 
             - name: "ESTHESIS_EDGE_LOCAL_ENABLED"
               value: "{{ .Values.esthesis.edge.local.enabled }}"
-            - name: "ESTHESIS_EDGE_LOCAL_INFLUXDB_URL"
+            - name: "ESTHESIS_EDGE_LOCAL_INFLUX_DB_URL"
               value: "{{ .Values.esthesis.edge.local.influxDb.url }}"
-            - name: "ESTHESIS_EDGE_LOCAL_INFLUXDB_TOKEN"
+            - name: "ESTHESIS_EDGE_LOCAL_INFLUX_DB_TOKEN"
               value: "{{ .Values.esthesis.edge.local.influxDb.token }}"
-            - name: "ESTHESIS_EDGE_LOCAL_INFLUXDB_BUCKET"
+            - name: "ESTHESIS_EDGE_LOCAL_INFLUX_DB_BUCKET"
               value: "{{ .Values.esthesis.edge.local.influxDb.bucket }}"
-            - name: "ESTHESIS_EDGE_LOCAL_INFLUXDB_ORG"
+            - name: "ESTHESIS_EDGE_LOCAL_INFLUX_DB_ORG"
               value: "{{ .Values.esthesis.edge.local.influxDb.org }}"
 
             - name: "ESTHESIS_EDGE_CORE_PUSH_ENABLED"
@@ -80,78 +82,80 @@ spec:
               value: "{{ .Values.esthesis.edge.core.registration.tags | join "," }}"
             - name: "ESTHESIS_EDGE_CORE_KEY_ALGORITHM"
               value: "{{ .Values.esthesis.edge.core.keyAlgorithm }}"
+            - name: "ESTHESIS_EDGE_CORE_CERT"
+              value: "{{ .Values.esthesis.edge.core.cert }}"
 
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_ENABLED"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_ENABLED"
               value: "{{ .Values.esthesis.edge.modules.enedis.enabled }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_CRON"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_CRON"
               value: "{{ .Values.esthesis.edge.modules.enedis.cron }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_MAX_DEVICES"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_MAX_DEVICES"
               value: "{{ .Values.esthesis.edge.modules.enedis.maxDevices }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_PAST_DAYS_INIT"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_PAST_DAYS_INIT"
               value: "{{ .Values.esthesis.edge.modules.enedis.pastDaysInit }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_CLIENT_ID"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_CLIENT_ID"
               value: "{{ .Values.esthesis.edge.modules.enedis.clientId }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_CLIENT_SECRET"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_CLIENT_SECRET"
               value: "{{ .Values.esthesis.edge.modules.enedis.clientSecret }}"
 
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DC_ENABLED"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_ENABLED"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dc.enabled }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DC_CATEGORY"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_CATEGORY"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dc.category }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DC_MEASUREMENT"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_MEASUREMENT"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dc.measurement }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DC_ERRORS_THRESHOLD"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DC_ERRORS_THRESHOLD"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dc.errorsThreshold }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ENABLED"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ENABLED"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dcmp.enabled }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DCMP_CATEGORY"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_CATEGORY"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dcmp.category }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DCMP_MEASUREMENT"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_MEASUREMENT"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dcmp.measurement }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ERRORS_THRESHOLD"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DCMP_ERRORS_THRESHOLD"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dcmp.errorsThreshold }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DP_ENABLED"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ENABLED"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dp.enabled }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DP_CATEGORY"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_CATEGORY"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dp.category }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DP_MEASUREMENT"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_MEASUREMENT"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dp.measurement }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_FETCH_TYPES_DP_ERRORS_THRESHOLD"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ERRORS_THRESHOLD"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dp.errorsThreshold }}"
 
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.enabled }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.stateChecking }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.welcomeUrl }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_REDIRECT_URL"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.redirectUrl }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_DURATION"
-              value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.redirectUrl }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_URL"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_DURATION"
+              value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.duration }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_URL"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo1Url }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_ALT"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO1_ALT"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo1Alt }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_URL"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_URL"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo2Url }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_ALT"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_ALT"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo2Alt }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_URL"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_URL"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo3Url }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_ALT"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_ALT"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo3Alt }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_BUTTON_URL"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_BUTTON_URL"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.buttonUrl }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_TITLE"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_TITLE"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.registration.title }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_MESSAGE"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_MESSAGE"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.registration.message }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_TITLE"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_TITLE"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.success.title }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_MESSAGE"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_SUCCESS_MESSAGE"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.success.message }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_TITLE"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_TITLE"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.error.title }}"
-            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_MESSAGE"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_ERROR_MESSAGE"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.error.message }}"
