--- a/esthesis-edge-backend/src/main/resources/application-dev.yaml
+++ b/esthesis-edge-backend/src/main/resources/application-dev.yaml
@@ -10,6 +10,8 @@ quarkus:
         level: DEBUG
 esthesis:
   edge:
+    local:
+      enabled: true
     modules:
       enedis:
         self-registration:
