--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -64,6 +64,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-health</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
 
     <!-- THIRD-PARTY -->
     <dependency>
