fix: core registration and sync issue

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       ESTHESIS_EDGE_CORE_PUSH_TOPIC_PING: "${ESTHESIS_EDGE_CORE_PUSH_TOPIC_PING:-esthesis/ping}"
       ESTHESIS_EDGE_CORE_REGISTRATION_ENABLED: "${ESTHESIS_EDGE_CORE_REGISTRATION_ENABLED:-false}"
       ESTHESIS_EDGE_CORE_REGISTRATION_SECRET: "${ESTHESIS_EDGE_CORE_REGISTRATION_SECRET:-}"
+      ESTHESIS_EDGE_CORE_REGISTRATION_CRON: "${ESTHESIS_EDGE_CORE_REGISTRATION_CRON:-0 0 * * * ?}"
       ESTHESIS_EDGE_CORE_TAGS: "${ESTHESIS_EDGE_CORE_TAGS:-edge}"
       ESTHESIS_EDGE_CORE_KEY_ALGORITHM: "${ESTHESIS_EDGE_CORE_KEY_ALGORITHM:-RSA}"
       ESTHESIS_EDGE_CORE_CERT: "${ESTHESIS_EDGE_CORE_CERT:-}"
