--- a/esthesis-edge-backend/src/main/resources/application-test.yaml
+++ b/esthesis-edge-backend/src/main/resources/application-test.yaml
@@ -16,6 +16,7 @@ esthesis:
     core:
       registration:
         secret: "test"
+        enabled: true
     modules:
       enedis:
         enabled: true
