fix: disable liquibase during tests

--- a/esthesis-edge-backend/src/main/resources/application-test.yaml
+++ b/esthesis-edge-backend/src/main/resources/application-test.yaml
@@ -10,6 +10,8 @@ quarkus:
       scope: ApplicationScoped
     EnedisClient:
       scope: ApplicationScoped
+  liquibase:
+    enabled: false
 
 esthesis:
   edge:
