feat: add new ENEDIS endpoints for consumption and production load curves

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,14 @@ services:
       ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_CATEGORY: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_CATEGORY:-energy}"
       ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_MEASUREMENT: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_MEASUREMENT:-dp}"
       ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ERRORS_THRESHOLD: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ERRORS_THRESHOLD:-10}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_ENABLED:-false}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_CATEGORY: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_CATEGORY:-energy}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_MEASUREMENT: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_MEASUREMENT:-clc}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_ERRORS_THRESHOLD: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_ERRORS_THRESHOLD:-10}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_ENABLED:-false}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_CATEGORY: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_CATEGORY:-energy}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_MEASUREMENT: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_MEASUREMENT:-plc}"
+      ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_ERRORS_THRESHOLD: "${ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_ERRORS_THRESHOLD:-10}"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED:-false}"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_STATE_CHECKING:-true}"
       ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL: "${ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_WELCOME_URL:-}"
