--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -124,6 +124,22 @@ spec:
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dp.measurement }}"
             - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_DP_ERRORS_THRESHOLD"
               value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.dp.errorsThreshold }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_ENABLED"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.clc.enabled }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_CATEGORY"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.clc.category }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_MEASUREMENT"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.clc.measurement }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_CLC_ERRORS_THRESHOLD"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.clc.errorsThreshold }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_ENABLED"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.plc.enabled }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_CATEGORY"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.plc.category }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_MEASUREMENT"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.plc.measurement }}"
+            - name: "ESTHESIS_EDGE_MODULES_ENEDIS_FETCH_TYPES_PLC_ERRORS_THRESHOLD"
+              value: "{{ .Values.esthesis.edge.modules.enedis.fetchTypes.plc.errorsThreshold }}"
 
             - name: "ESTHESIS_EDGE_MODULES_ENEDIS_SELF_REGISTRATION_ENABLED"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.enabled }}"
