fix: Liquibase migration failing

--- a/esthesis-edge-backend/src/main/resources/application.yaml
+++ b/esthesis-edge-backend/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ quarkus:
     enabled: false
   hibernate-orm:
     database:
-      generation: update
+      generation: none
   datasource:
     db-kind: mariadb
     username: esthesis-system
