fix: enable liquibase during tests

--- a/esthesis-edge-backend/src/main/resources/application-test.yaml
+++ b/esthesis-edge-backend/src/main/resources/application-test.yaml
@@ -11,7 +11,7 @@ quarkus:
     EnedisClient:
       scope: ApplicationScoped
   liquibase:
-    enabled: false
+    enabled: true
 
 esthesis:
   edge:
