chore(helm): add tls secret to ingress & update docs

--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -29,10 +29,10 @@ spec:
                 name: esthesis-edge-service
                 port:
                   number: {{ .Values.esthesis.edge.service.port }}
-  {{- if or .Values.esthesis.edge.ingress.certManagerClusterIssuer .Values.esthesis.edge.ingress.certManagerIssuer }}
+  {{- if or .Values.esthesis.edge.ingress.certManagerClusterIssuer .Values.esthesis.edge.ingress.certManagerIssuer .Values.esthesis.edge.ingress.ingressTlsSecret }}
   tls:
     - hosts:
         - {{ .Values.esthesis.edge.ingress.hostname }}
-      secretName: esthesis-edge-ingress-tls
+      secretName: {{ .Values.esthesis.edge.ingress.ingressTlsSecret }}
   {{- end }}
 {{- end }}
