feat: deddie module

--- a/esthesis-edge-backend/src/main/resources/application-test.yaml
+++ b/esthesis-edge-backend/src/main/resources/application-test.yaml
@@ -12,6 +12,8 @@ quarkus:
       scope: ApplicationScoped
     FroniusClient:
       scope: ApplicationScoped
+    DeddieClient:
+      scope: ApplicationScoped
   liquibase:
     enabled: true
 
